--- a/docs/python/2.voorbereidingen.md
+++ b/docs/python/2.voorbereidingen.md
@@ -5,44 +5,59 @@ sidebar_position: 2
 # Voorbereidingen
 
 ## ChatGPT account
+
 Maak een account aan op [ChatGPT](https://chat.openai.com/)
 
-
 ## Python installeren
-Volg de installatie-instructies voor Python voor [Windows](https://www.digitalocean.com/community/tutorials/install-python-windows-10) of [macOS](https://www.makeuseof.com/how-to-install-python-on-mac/). Controleer in de instructies welk versie geschikt is voor jouw OS.
+
+Volg de installatie-instructies voor Python
+voor [Windows](https://www.digitalocean.com/community/tutorials/install-python-windows-10)
+of [macOS](https://www.makeuseof.com/how-to-install-python-on-mac/). Controleer in de instructies welk versie geschikt
+is voor jouw OS.
 
 ## IDE
-Zorg dat je een ontwikkelomgeving (IDE) geïnstalleerd hebt. Voor Python adviseren wij een van de twee onderstaande tools.
+
+Zorg dat je een ontwikkelomgeving (IDE) geïnstalleerd hebt. Voor Python adviseren wij een van de twee onderstaande
+tools.
+
 - [PyCharm](https://www.jetbrains.com/pycharm/download) - wil je dit installeren?
-- [Visual Studio Code](https://code.visualstudio.com/Download) - wil je dit installeren? 
+- [Visual Studio Code](https://code.visualstudio.com/Download) - wil je dit installeren?
 
 ## Project aanmaken in PyCharm
-Open PyCharm en klik op nieuw project. Mocht je PyCharm al hebben geïnstalleerd en je een oudere versie hebt kan het zijn dat je de optie krijg om een framework te kiezen zoals in het plaatje hieronder. Selecteer `Pure Python` en geef je project een naam.
+
+Open PyCharm en klik op nieuw project. Mocht je PyCharm al hebben geïnstalleerd en je een oudere versie hebt kan het
+zijn dat je de optie krijg om een framework te kiezen zoals in het plaatje hieronder. Selecteer `Pure Python` en geef je
+project een naam.
 
 ![project.png](project.png)
-
 
 Zie je deze optie niet zoals in de afbeelding hieronder geef dan je project alleen een naam en klik op create
 ![project2.jpg](project2.jpg)
 
 ## Project aanmaken in Visual Studio Code
-- Maak een projectmap aan op een locatie naar keuze. 
+
+- Maak een projectmap aan op een locatie naar keuze.
 
 - Open de projectmap in Visual Studio Code via File -> Add Folder to Workspace
 
 ## Installeer extensions voor Visual Studio Code
-Voor een goede werking van Python in Visual Studio Code is het verstandig om een tweetal extensies te installeren, hierdoor krijg je bijvoorbeeld betere linting, debugging en indentation. 
+
+Voor een goede werking van Python in Visual Studio Code is het verstandig om een tweetal extensies te installeren,
+hierdoor krijg je bijvoorbeeld betere linting, debugging en indentation.
 De volgende extensions moet je hiervoor installeren.
+
 - `Python`
 - `Python Extension Pack`
 
 ![extension-python.jpg](extension-python.jpg)
 
-##  Packages installeren 
-Als laatste stap gaan we nog een aantal packages installeren via pip. pip is de package installer voor python. 
+## Packages installeren
+
+Als laatste stap gaan we nog een aantal packages installeren via pip. pip is de package installer voor python.
 
 Open de terminal in PyCharm/Visual Studio Code en installeer de volgende packages aan de hand van deze commands:
-```
+
+```bash
 pip install behave
 pip install fastapi
 pip install uvicorn
