--- a/docs/python/3.opdracht1.md
+++ b/docs/python/3.opdracht1.md
@@ -10,18 +10,20 @@ gebruik te maken van Behaviour-driven development BDD. Vanuit de business heb je
 ### Requirements:
 
 - **Optellen:** de rekenmachine moet een methode bieden om twee of meer getallen bij elkaar op te tellen, met
-ondersteuning voor decimalen en negatieve waarden.
+  ondersteuning voor decimalen en negatieve waarden.
 
 - **Aftrekken:** de rekenmachine moet een methode bevatten om het ene getal van het andere af te trekken, inclusief
-decimalen en negatieve waarden.
+  decimalen en negatieve waarden.
 
 - **Vermenigvuldiging:** de rekenmachine moet een methode bieden om twee of meer getallen met elkaar te
-vermenigvuldigen, waarbij decimalen en negatieve waarden worden ondersteund.
+  vermenigvuldigen, waarbij decimalen en negatieve waarden worden ondersteund.
 
 - **Delen:** de rekenmachine moet een methode bevatten om het ene getal door het andere te delen, met ondersteuning voor
-decimalen en het omgaan met deling door nul-fouten.
+  decimalen en het omgaan met deling door nul-fouten.
 
-``` !!!!! IMPORTANT NOTE: Voordat we gaan beginnen, straks gaan we gebruiken maken van ChatGPT, controleer zelf het antwoordt dat wordt teruggegeven door ChatGPT! De gegeneerde code is namelijk niet altijd 100% correct maar geeft je een zetje in de goede richting. Dit zorgt voor een kritische blik op het gene wat je laat genereren. ```
+> **IMPORTANT NOTE:** Voordat we gaan beginnen, straks gaan we gebruiken maken van ChatGPT, controleer zelf het 
+> antwoordt dat wordt teruggegeven door ChatGPT! De gegeneerde code is namelijk niet altijd 100% correct, maar geeft 
+> je een zetje in de goede richting. Dit zorgt voor een kritische blik op wat je laat genereren.
 
 ## 1.1 Cucumber Feature file maken.
 
@@ -32,10 +34,10 @@ Een voorbeeld van een feature file ziet er uit als volgt:
 
 ```yml
 Scenario: Scenarionaam
-Given I have one pizza
-And Cut the pizza in 8 slices
-When I eat 2 slices
-Then The result is 6 slices left
+  Given I have one pizza
+  And Cut the pizza in 8 slices
+  When I eat 2 slices
+  Then The result is 6 slices left
 ```
 
 - **Opdracht:** Genereer een Cucumber feature file met de gegeven requirements in ChatGPT.
@@ -90,19 +92,19 @@ een the/experts. shirt om wat hulp.
 Herhaal bovenstaande stappen en voeg extra functionaliteit toe aan de calculator voor de volgende 6 requirements.
 
 - **Machtsverheffing:** De rekenmachine moet een methode bieden om een getal tot een gegeven macht te verheffen,
-inclusief fractionele en negatieve exponenten.
+  inclusief fractionele en negatieve exponenten.
 
 - **Vierkantswortel:** De rekenmachine moet een methode hebben om de vierkantswortel van een gegeven getal te berekenen,
-met de mogelijkheid voor zowel positieve als negatieve invoerwaarden.
+  met de mogelijkheid voor zowel positieve als negatieve invoerwaarden.
 
 - **Functie van een getal:** De rekenmachine moet een methode bieden om de functie van een niet-negatief geheel getal te
-berekenen.
+  berekenen.
 
 - **Logaritmes:** De rekenmachine moet methoden bevatten om natuurlijke logaritmes (basis e) en gemeenschappelijke
-logaritmes (basis 10) van positieve getallen te berekenen.
+  logaritmes (basis 10) van positieve getallen te berekenen.
 
 - **Trigonometrie:** De rekenmachine moet methoden bieden om de sinus, cosinus en tangens van hoeken te berekenen, met
-ondersteuning voor zowel radialen als graden.
+  ondersteuning voor zowel radialen als graden.
 
 - **Geheugenfuncties:** De rekenmachine moet methoden hebben om een waarde in het geheugen op te slaan, op te roepen en
-te wissen, zodat gebruikers gemakkelijker complexe berekeningen kunnen uitvoeren.
+  te wissen, zodat gebruikers gemakkelijker complexe berekeningen kunnen uitvoeren.
