Alle feedback verwerkt van Seb en Bart

--- a/docs/java/3.opdracht1.md
+++ b/docs/java/3.opdracht1.md
@@ -32,13 +32,14 @@ beschreven welke stappen er genomen dienen te worden om tot een bepaald resultaa
 
 Een voorbeeld van een feature file ziet er uit als volgt:
 
-```yml
-Scenario: Scenarionaam
-  Given I have one pizza
-  And Cut the pizza in 8 slices
-  When I eat 2 slices
-  Then The result is 6 slices left
-```
+<pre>
+Scenario: Scenarionaam<br></br>
+  <b>  Given</b> I have one pizza<br></br>
+  <b>  And</b> Cut the pizza in 8 slices<br></br>
+  <b>  When</b> I eat 2 slices<br></br>
+  <b>  Then</b> The result is 6 slices left<br></br>
+</pre>
+
 
 - **Opdracht 1.1A:** Genereer een Cucumber feature file met de gegeven requirements in ChatGPT.
 
@@ -104,22 +105,24 @@ the/experts-shirt om hulp.
 
 ## 1.5 Uitbreiden
 
-Herhaal bovenstaande stappen en voeg extra functionaliteit toe aan de calculator voor de volgende zes requirements.
+Herhaal bovenstaande stappen en voeg extra functionaliteit toe aan de calculator voor de volgende 6 requirements.
+Let op, als je hier niet aan uit komt, ga vooral verder met opdracht 2.
 
-- **Machtsverheffing:** De rekenmachine moet een methode bieden om een getal tot een gegeven macht te verheffen,
-inclusief fractionele en negatieve exponenten.
+- **Machtsverheffing:** De rekenmachine moet een getal tot een gegeven macht kunnen verheffen,
+  inclusief fractionele en negatieve exponenten.
 
-- **Vierkantswortel:** De rekenmachine moet een methode hebben om de vierkantswortel van een gegeven getal te berekenen,
-met de mogelijkheid voor zowel positieve als negatieve invoerwaarden.
+- **Vierkantswortel:** De rekenmachine moet de vierkantswortel van een gegeven getal kunnen berekenen,
+  met de mogelijkheid voor zowel positieve als negatieve invoerwaarden.
 
-- **Functie van een getal:** De rekenmachine moet een methode bieden om de functie van een niet-negatief geheel getal te
-berekenen.
+- **Functie van een getal:** De rekenmachine moet de functie van een niet-negatief geheel getal kunnen
+  berekenen.
 
-- **Logaritmes:** De rekenmachine moet methoden bevatten om natuurlijke logaritmes (basis e) en gemeenschappelijke
-logaritmes (basis 10) van positieve getallen te berekenen.
+- **Logaritmes:** De rekenmachine moet natuurlijke logaritmes (basis e) en gemeenschappelijke
+  logaritmes (basis 10) van positieve getallen kunnen berekenen.
 
-- **Trigonometrie:** De rekenmachine moet methoden bieden om de sinus, cosinus en tangens van hoeken te berekenen, met
-ondersteuning voor zowel radialen als graden.
+- **Trigonometrie:** De rekenmachine moet de sinus, cosinus en tangens van hoeken kunnen berekenen, met
+  ondersteuning voor zowel radialen als graden.
 
-- **Geheugenfuncties:** De rekenmachine moet methoden hebben om een waarde in het geheugen op te slaan, op te roepen en
-te wissen, zodat gebruikers gemakkelijker complexe berekeningen kunnen uitvoeren.
+- **Geheugenfuncties:** De rekenmachine moet een waarde in het geheugen op kunnen slaan, op te roepen en
+  te wissen, zodat gebruikers gemakkelijker complexe berekeningen kunnen uitvoeren.
+- 
