--- a/docs/python/3.opdracht1.md
+++ b/docs/python/3.opdracht1.md
@@ -32,33 +32,33 @@ beschreven welke stappen er genomen dienen te worden om tot een bepaald resultaa
 
 Een voorbeeld van een feature file ziet er uit als volgt:
 
-```yml
-Scenario: Scenarionaam
-  Given I have one pizza
-  And Cut the pizza in 8 slices
-  When I eat 2 slices
-  Then The result is 6 slices left
-```
+<pre>
+Scenario: Scenarionaam<br></br>
+  <b>  Given</b> I have one pizza<br></br>
+  <b>  And</b> Cut the pizza in 8 slices<br></br>
+  <b>  When</b> I eat 2 slices<br></br>
+  <b>  Then</b> The result is 6 slices left<br></br>
+</pre>
 
-- **Opdracht:** Genereer een Cucumber feature file met de gegeven requirements in ChatGPT.
+- **Opdracht 1.1A:** Genereer een Cucumber feature file met de gegeven requirements in ChatGPT.
 
-Als de feature file is gegenereerd, kan je de gegenereerde code kopiëren. Plak de code in een bestand in de hoofdfolder
+- **Opdracht 1.2B:**Als de feature file is gegenereerd, kan je de gegenereerde code kopiëren. Plak de code in een bestand in de hoofdfolder
 waar ook `main.py`. Maak dit bestand eerst aan.
 
 ## 1.2 Maak een step file aan
 
 Een step file is een bestand dat de implementatie van de stappen beschrijft die in een scenario zijn gedefinieerd.
 
-De step file koppelt de stappen uit de Gherkin scenario's aan de daadwerkelijke Python file voor de calculator in dit
-geval. De step file kan gezien worden als de koppeling tussen De uiteindelijke implementatie en de feature file met
+De step file koppelt de stappen uit de Gherkin-scenario's aan de daadwerkelijke Python file voor de calculator in dit
+geval. De step file kan gezien worden als de koppeling tussen de uiteindelijke implementatie en de feature file met
 Gherkin.
 
 Een step file in Python wordt geschreven als een Python file met behulp van Behave package. Dit bestand bevat methoden
 die zijn geannoteerd door specifieke Cucumber-annotaties, zoals @Given, @When, @Then, @And en @But.
 
-- **Opdracht:** Maak een nieuwe folder aan in de hoofdfolder genaamd `steps`.
+- **Opdracht 1.2A:** Maak een nieuwe folder aan in de hoofdfolder genaamd `steps`.
 
-- **Opdracht:** Maak een nieuw bestand aan in de `steps` folder genaamd `stepfile.py`.
+- **Opdracht 1.2B:** Maak een nieuw bestand aan in de `steps` folder genaamd `stepfile.py`.
 
 Aangezien ChatGPT de context van de chat gebruikt, is het niet nodig om opnieuw context mee te geven aan de vraag die 
 je stelt aan ChatGPT.
@@ -70,13 +70,13 @@ je stelt aan ChatGPT.
 Tot slot, om de cucumber testen te laten slagen is de python code nodig voor de calculator zelf. Dit kan je doen op
 dezelfde manier als bij opdracht 1.1 & 1.2.
 
-Verander de naam van `main.py` naar `Calculator.py`.
+- **Opdracht 1.3A:** Verander de naam van `main.py` naar `Calculator.py`.
 
-- **Opdracht:** Plak de gegeneerde code door ChatGPT in het `Calculator.java` bestand.
+- **Opdracht 1.3B:** Plak de gegeneerde code door ChatGPT in het `Calculator.java` bestand.
 
 ## 1.4 run test
 
-Om te kijken of de testen nu slagen kan je de Cucumber test file uitvoeren door rechtermuisknop te drukken op
+- **Opdracht:** Om te kijken of de testen nu slagen kan je de Cucumber test file uitvoeren door rechtermuisknop te drukken op
 de `calculator.feature` en op `run feature: calculator` te drukken.
 
 Als alles in een keer goed gaat, heb je nu geen faalden testen. Echter bestaat er een mogelijkheid dat er toch iets fout
@@ -90,21 +90,22 @@ the/experts-shirt om hulp.
 ## 1.5 Uitbreiden
 
 Herhaal bovenstaande stappen en voeg extra functionaliteit toe aan de calculator voor de volgende 6 requirements.
+Let op, als je hier niet aan uit komt, ga vooral verder met opdracht 2.
 
-- **Machtsverheffing:** De rekenmachine moet een methode bieden om een getal tot een gegeven macht te verheffen,
+- **Machtsverheffing:** De rekenmachine moet een getal tot een gegeven macht kunnen verheffen,
   inclusief fractionele en negatieve exponenten.
 
-- **Vierkantswortel:** De rekenmachine moet een methode hebben om de vierkantswortel van een gegeven getal te berekenen,
+- **Vierkantswortel:** De rekenmachine moet de vierkantswortel van een gegeven getal kunnen berekenen,
   met de mogelijkheid voor zowel positieve als negatieve invoerwaarden.
 
-- **Functie van een getal:** De rekenmachine moet een methode bieden om de functie van een niet-negatief geheel getal te
+- **Functie van een getal:** De rekenmachine moet de functie van een niet-negatief geheel getal kunnen
   berekenen.
 
-- **Logaritmes:** De rekenmachine moet methoden bevatten om natuurlijke logaritmes (basis e) en gemeenschappelijke
-  logaritmes (basis 10) van positieve getallen te berekenen.
+- **Logaritmes:** De rekenmachine moet natuurlijke logaritmes (basis e) en gemeenschappelijke
+  logaritmes (basis 10) van positieve getallen kunnen berekenen.
 
-- **Trigonometrie:** De rekenmachine moet methoden bieden om de sinus, cosinus en tangens van hoeken te berekenen, met
+- **Trigonometrie:** De rekenmachine moet de sinus, cosinus en tangens van hoeken kunnen berekenen, met
   ondersteuning voor zowel radialen als graden.
 
-- **Geheugenfuncties:** De rekenmachine moet methoden hebben om een waarde in het geheugen op te slaan, op te roepen en
+- **Geheugenfuncties:** De rekenmachine moet een waarde in het geheugen op kunnen slaan, op te roepen en
   te wissen, zodat gebruikers gemakkelijker complexe berekeningen kunnen uitvoeren.
