--- a/docs/python/4.opdracht2.md
+++ b/docs/python/4.opdracht2.md
@@ -15,8 +15,8 @@ Hiervoor zijn de volgende requirements op gezet:
 - Ik heb een API draaien op localhost:8000
 - Ik wil een boek object
 - Ik wil een lijst van boeken kunnen ophalen
-- Ik wil een boek aan kunnen maken met een titel, schrijver, isbn-nummer en prijs
-- Ik wil een boek ophalen met een isbn-nummer
+- Ik wil een boek aan kunnen maken met een titel, schrijver, ISBN en prijs
+- Ik wil een boek ophalen met een ISBN-nummer
 - Ik wil een boek kunnen verwijderen
 - Ik wil een boek kunnen aanpassen
 
