--- a/docs/python/3.opdracht1.md
+++ b/docs/python/3.opdracht1.md
@@ -79,17 +79,16 @@ dezelfde manier als bij opdracht 1.1 & 1.2.
 - **Opdracht:** Om te kijken of de testen nu slagen kan je de Cucumber test file uitvoeren door rechtermuisknop te drukken op
 de `calculator.feature` en op `run feature: calculator` te drukken.
 
-Als alles in een keer goed gaat, heb je nu geen faalden testen. Echter bestaat er een mogelijkheid dat er toch iets fout
-gaat.
-Als dit fout gaat kan je proberen om de foutmelding in ChatGPT te geven samen met de methode waar het fout gaat. Dan kan
-ChatGPT dit in sommige gevallen oplossen.
+Als alles in een keer goed gaat, heb je nu geen gefaalde testen. Echter bestaat er een mogelijkheid dat er toch iets 
+fout gaat. Als dit zo is dan kan je proberen om de foutmelding in ChatGPT te geven samen met de methode waar het fout 
+gaat. Dan kan ChatGPT dit in sommige gevallen oplossen.
 
 Lukt het niet? Probeer er dan achter  te komen wat er mis gaat en het zelf op te lossen of vraag iemand met een
 the/experts-shirt om hulp.
 
 ## 1.5 Uitbreiden
 
-Herhaal bovenstaande stappen en voeg extra functionaliteit toe aan de calculator voor de volgende 6 requirements.
+Herhaal bovenstaande stappen en voeg extra functionaliteit toe aan de calculator voor de volgende zes requirements.
 Let op, als je hier niet aan uit komt, ga vooral verder met opdracht 2.
 
 - **Machtsverheffing:** De rekenmachine moet een getal tot een gegeven macht kunnen verheffen,
