--- a/docs/java/3.opdracht1.md
+++ b/docs/java/3.opdracht1.md
@@ -69,7 +69,7 @@ Gherkin.
 Een step file in Java wordt geschreven als een Java-klasse met behulp van Cucumber's Java API. Deze klasse bevat
 methoden die zijn geannoteerd door specifieke Cucumber-annotaties, zoals @Given, @When, @Then, @And en @But.
 
-- **Opdracht:** Maak een bestand aan in de map zoals hieronder in de afbeelding weergegeven. Geef dit bestand de
+- **Opdracht:** Maak een map en een bestand aan zoals hieronder in de afbeelding weergegeven. Geef dit bestand de
 naam: `CalculatorSteps.java`.
 
 ![project-structure2.jpg](project-structure2.jpg)
