--- a/docs/python/3.opdracht1.md
+++ b/docs/python/3.opdracht1.md
@@ -42,8 +42,7 @@ Scenario: Scenarionaam<br></br>
 
 - **Opdracht 1.1A:** Genereer een Cucumber feature file met de gegeven requirements in ChatGPT.
 
-- **Opdracht 1.2B:**Als de feature file is gegenereerd, kan je de gegenereerde code kopiëren. Plak de code in een bestand in de hoofdfolder
-waar ook `main.py`. Maak dit bestand eerst aan.
+- **Opdracht 1.2B:**Als de feature file is gegenereerd, kan je de gegenereerde code kopiëren. Plak de code in een bestand in de hoofdfolder genaamd `calculator.py`. Maak dit bestand eerst aan.
 
 ## 1.2 Maak een step file aan
 
@@ -72,7 +71,7 @@ dezelfde manier als bij opdracht 1.1 & 1.2.
 
 - **Opdracht 1.3A:** Verander de naam van `main.py` naar `Calculator.py`.
 
-- **Opdracht 1.3B:** Plak de gegeneerde code door ChatGPT in het `Calculator.java` bestand.
+- **Opdracht 1.3B:** Plak de gegeneerde code door ChatGPT in het `Calculator.py` bestand.
 
 ## 1.4 run test
 
