--- a/docs/python/3.opdracht1.md
+++ b/docs/python/3.opdracht1.md
@@ -75,8 +75,7 @@ dezelfde manier als bij opdracht 1.1 & 1.2.
 
 ## 1.4 run test
 
-- **Opdracht:** Om te kijken of de testen nu slagen kan je de Cucumber test file uitvoeren door rechtermuisknop te drukken op
-de `calculator.feature` en op `run feature: calculator` te drukken.
+- **Opdracht:** Om te kijken of de testen nu slagen kan je in de terminal `behave` uitvoeren
 
 Als alles in een keer goed gaat, heb je nu geen gefaalde testen. Echter bestaat er een mogelijkheid dat er toch iets 
 fout gaat. Als dit zo is dan kan je proberen om de foutmelding in ChatGPT te geven samen met de methode waar het fout 
