updated files with Tjebbe his comments

--- a/docs/java/3.opdracht1.md
+++ b/docs/java/3.opdracht1.md
@@ -69,8 +69,7 @@ Gherkin.
 Een step file in Java wordt geschreven als een Java-klasse met behulp van Cucumber's Java API. Deze klasse bevat
 methoden die zijn geannoteerd door specifieke Cucumber-annotaties, zoals @Given, @When, @Then, @And en @But.
 
-- **Opdracht:** Maak een map en een bestand aan zoals hieronder in de afbeelding weergegeven. Geef dit bestand de
-naam: `CalculatorSteps.java`.
+- **Opdracht:** Maak een package aan en een nieuwe java class aan zoals hieronder in de afbeelding weergegeven. Geef dit bestand de naam: `CalculatorSteps.java`.
 
 ![project-structure2.jpg](project-structure2.jpg)
 
@@ -119,3 +118,6 @@ Let op, als je hier niet aan uit komt, ga vooral verder met opdracht 2.
 
 - **Logaritmes:** De rekenmachine moet natuurlijke logaritmes (basis e) en gemeenschappelijke
   logaritmes (basis 10) van positieve getallen kunnen berekenen.
+
+  - **Trigonometrie:** De rekenmachine moet de sinus, cosinus en tangens van hoeken kunnen berekenen, met
+  ondersteuning voor zowel radialen als graden.
