--- a/docs/java/4.opdracht2.md
+++ b/docs/java/4.opdracht2.md
@@ -7,7 +7,7 @@ sidebar_position: 3
 In de tweede opdracht ga je aan de slag om een wat gecompliceerdere applicatie te genereren. We gaan eerst beginnen met
 aanmaken van een nieuw project. Doe dat op dezelfde manier als in opdracht 1.
 In deze opdracht gaan we in twee delen een bookstore api ontwikkelen aan de hand van Karate, een plugin voor cucumber
-die speciaal is ontwikkeld voor API testen. Wilt u meer weten over Karate, kijk dan op de Github pagina
+die speciaal is ontwikkeld voor API testen. Wilt je meer weten over Karate, kijk dan op de Github pagina
 van [Karate Labs](https://github.com/karatelabs/karate)
 
 ## 2.1 Feature file
