--- a/docs/python/5.opdracht3.md
+++ b/docs/python/5.opdracht3.md
@@ -4,8 +4,7 @@ sidebar_position: 3
 
 # Opdracht 3: FastAPI Application
 
-In deze opdracht gaan we aan de hand van FastAPI de Bookstore API opzetten. FastAPI is een moderne, snelle
-(high-performance) web framework voor het bouwen van API's met Python 3.7+.
+In deze opdracht gaan we aan de hand van FastAPI de Bookstore API opzetten. FastAPI is een modern, snel (high-performance) web framework voor het bouwen van API's met Python 3.7+.
 FastAPI maakt gebruik van de nieuwste async en await-sleutelwoorden, wat het een asynchroon framework maakt, waardoor
 hoge prestaties en gelijktijdigheid mogelijk zijn, terwijl het toch gemakkelijk te lezen en te onderhouden is. Het biedt
 ook uitstekende ondersteuning voor moderne Python-functies zoals type annotaties, die de code leesbaarder en
