updated calculator feature file

--- a/docs/python/3.opdracht1.md
+++ b/docs/python/3.opdracht1.md
@@ -42,7 +42,7 @@ Scenario: Scenarionaam<br></br>
 
 - **Opdracht 1.1A:** Genereer een Cucumber feature file met de gegeven requirements in ChatGPT.
 
-- **Opdracht 1.1B:** Als de feature file is gegenereerd, kan je de gegenereerde code kopiëren. Plak de code in een bestand in de hoofdfolder genaamd `calculator.py`. Maak dit bestand eerst aan.
+- **Opdracht 1.1B:** Als de feature file is gegenereerd, kan je de gegenereerde code kopiëren. Plak de code in een bestand in de hoofdfolder genaamd `calculator.feature`. Maak dit bestand eerst aan.
 
 ## 1.2 Maak een step file aan
 
